--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,8 @@
         <module>config-server</module>
         <module>eureka-server</module>
         <module>gateway-server</module>
+        <module>admin-server</module>
+        <module>auth-server</module>
     </modules>
 
 </project>
