完成shop-server资源服务和shop-client客户端的开发并整合OAuth2单点登录

--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,8 @@
         <module>auth-server</module>
         <module>service-shop</module>
         <module>service-order</module>
+        <module>shop-client</module>
+        <module>shop-server</module>
     </modules>
 
 </project>
